# todoist-digest

./: .dockerignore  .envrc-example  .gitignore  .tool-versions  CHANGELOG.md  Makefile  README.md  TODO  docker-compose.yml  main.py  playground.py  pyproject.toml  readme.md  run.py  template.jinga  template.jinga2
.github/workflows/: build_and_public.yml  build_and_publish.yml  docker_build.yml  sync-metadata.yml
.trunk/: trunk.yaml
templates/: email.jinja  message.jinja  task.jinja
todoist_digest/: __init__.py  email.py  funcy_ext.py  internet.py  patch.py  templates.py  todoist.py  util.py
