[tool.poetry]
name = "todoist-digest"
version = "0.10.2"
description = "Generate a digest of comments that occured since the last checked in date. Useful for including in an email."
authors = ["Michael Bianco <mike@mikebian.co>"]
license = "MIT"
readme = "README.md"
keywords = ["todoist", "digest", "task", "management"]

[tool.poetry.dependencies]
python = "^3.11"
todoist-api-python = "^2.1.5"
click = "^8.1.7"
pyjson5 = "^1.6.6"
funcy-pipe = "^0.11.0"
# funcy-pipe = { develop = true, path = "../../python/funcy-pipe" }
python-dateutil = "^2.9.0.post0"
backoff = "^2.2.1"
markdown2 = "^2.5.0"
whatever = "^0.7"
apscheduler = "^3.10.4"
css-inline = "^0.14.1"
jinja2 = "^3.1.4"
structlog = "^24.4.0"
python-decouple-typed = "^3.11.0"

[tool.poetry.group.dev.dependencies]
isort = "5.13.2"
black = "^24.8.0"
pylint = "^3.2.6"
pyright = "^1.1.374"
mypy = "^1.11.1"

[tool.isort]
profile = "black"
float_to_top = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
todoist-digest = "todoist_digest:cli"
