[project]
name = "todoist-digest"
version = "0.10.4"
description = "Generate a digest of comments that occured since the last checked in date. Useful for including in an email."
requires-python = ">=3.11"
authors = [{ name = "Michael Bianco", email = "mike@mikebian.co" }]
license = "MIT"
readme = "README.md"
keywords = ["todoist", "digest", "task", "management"]
dependencies = [
    "apscheduler == 3.11.0",
    "backoff == 2.2.1",
    "click == 8.2.1",
    "css-inline == 0.17.0",
    "funcy-pipe == 0.11.1",
    "jinja2 == 3.1.6",
    "markdown2 == 2.5.4",
    "pyjson5 == 1.6.9",
    "python-dateutil == 2.9.0.post0",
    "python-decouple-typed == 3.11.0",
    "structlog == 25.4.0",
    "todoist-api-python == 3.1.0",
    "whatever == 0.7",
]

[project.scripts]
todoist-digest = "todoist_digest:cli"

[dependency-groups]
dev = [
    "pyright == 1.1.403",
    "ruff>=0.13.2",
]

[tool.uv.build-backend]
# avoids the src/ directory structure
module-root = ""

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
