[project]
name = "todoist-digest"
version = "0.12.0"
description = "Generate a digest of comments that occurred since the last checked in date. Useful for including in an email."
requires-python = ">=3.11"
authors = [{ name = "Michael Bianco", email = "mike@mikebian.co" }]
license = "MIT"
readme = "README.md"
keywords = ["todoist", "digest", "task", "management"]
dependencies = [
  "apscheduler >= 3.11.0",
  "backoff >= 2.2.1",
  "click >= 8.2.1",
  "css-inline >= 0.17.0",
  "funcy-pipe >= 0.11.1",
  "jinja2 >= 3.1.6",
  "markdown2 >= 2.5.4",
  "pyjson5 >= 1.6.9",
  "python-dateutil >= 2.9.0.post0",
  "python-decouple-typed >= 3.11.0",
  "structlog >= 25.4.0",
  "structlog_config >= 0.1.1",
  "todoist-api-python >= 3.1.0",
  "whatever >= 0.7",
  "whenever>=0.9.2",
]

[project.scripts]
todoist-digest = "todoist_digest:cli"

[dependency-groups]
debugging-extras = [
  "colorama>=0.4.6",
  "datamodel-code-generator>=0.34.0",
  "debugpy>=1.8.17",
  "docrepr>=0.2.0",
  "funcy-pipe>=0.13.0",
  "httpdbg>=2.0.2",
  "icecream>=2.1.8",
  "ipdb",
  "ipython>=9.6.0",
  "ipython-autoimport>=0.5.1",
  "ipython-ctrlr-fzf>=0.2.1",
  "ipython-playground>=0.4.0",
  "ipython-suggestions",
  "ipythonclipboard>=1.0b2",
  "jedi>=0.19.2",
  "llm-sql-prompt>=0.10.0",
  "pdbr[ipython]",
  "pipdeptree>=2.28.0",
  "pre-commit>=4.3.0",
  "beautiful-traceback",
  "pudb>=2025.1.1",
  "py-spy>=0.4.1",
  "pyfzf>=0.3.1",
  "pytest-fzf>=0.1.2.post1",
  "pytest-watcher>=0.4.3",
  "rich>=14.1.0",
  "rpdb>=0.2.0",
  "sqlparse>=0.5.3",
  "uv-development-toggle>=0.6.0",
]
dev = ["pyright == 1.1.407", "ruff>=0.13.2"]

[tool.uv.build-backend]
# avoids the src/ directory structure
module-root = ""

[tool.uv.sources]
ipdb = { git = "https://github.com/iloveitaly/ipdb", rev = "support-executables" }

[build-system]
requires = ["uv_build>=0.8.11,<0.10.0"]
build-backend = "uv_build"
